--- a/ZipPayWebApi.Tests/ZipPayWebApi.Tests.csproj
+++ b/ZipPayWebApi.Tests/ZipPayWebApi.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ZipPayWebApp\ZipPayWebApi.csproj" />
+    <ProjectReference Include="..\ZipPayWebApi\ZipPayWebApi.csproj" />
   </ItemGroup>
 
 </Project>
