--- a/ZipPayWebApi/ZipPayWebApi.csproj
+++ b/ZipPayWebApi/ZipPayWebApi.csproj
@@ -6,8 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
-    <PackageReference Include="Dapper" Version="2.0.123" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ZipPayWebApi.DAL\ZipPay.DAL.csproj" />
   </ItemGroup>
 
 
