--- a/ZipPayWebApi.Tests/ZipPay.BAL.Tests.csproj
+++ b/ZipPayWebApi.Tests/ZipPay.BAL.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ZipPayWebApi\ZipPayWebApi.csproj" />
+    <ProjectReference Include="..\ZipPayWebApi\ZipPay.WebApi.csproj" />
   </ItemGroup>
 
 </Project>
